--- a/plugin.xml
+++ b/plugin.xml
@@ -31,7 +31,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
     <repo>https://git-wip-us.apache.org/repos/asf/cordova-plugin-geolocation.git</repo>
     <issue>https://issues.apache.org/jira/browse/CB/component/12320638</issue>
 
-    <dependency id="cordova-plugin-compat" version="^1.0.0" />
+<!--     <dependency id="cordova-plugin-compat" version="^1.0.0" /> -->
 
     <!-- android -->
     <platform name="android">
