--- a/plugin.xml
+++ b/plugin.xml
@@ -37,7 +37,8 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 
     <!-- android -->
     <platform name="android">
-
+        <preference name="GOOGLE_SERVICES_VERSION" default="11.6.+"/>
+      
         <config-file target="AndroidManifest.xml" parent="/*">
             <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
             <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -46,7 +47,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
             <uses-feature android:name="android.hardware.location.network" android:required="false" />
         </config-file>
 
-        <framework src="com.google.android.gms:play-services-location:11.6.+" />
+        <framework src="com.google.android.gms:play-services-location:$GOOGLE_SERVICES_VERSION" />
 
         <config-file target="res/xml/config.xml" parent="/*">
           <feature name="Geolocation">
