--- a/plugin.xml
+++ b/plugin.xml
@@ -47,7 +47,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
             <uses-feature android:name="android.hardware.location.network" android:required="false" />
         </config-file>
 
-        <dependency id="cordova-support-android-plugin" url="https://github.com/chemerisuk/cordova-support-android-plugin.git"/>
+        <dependency id="cordova-support-android-plugin" version="~0.3.1"/>
 
         <framework src="com.google.android.gms:play-services-location:$GOOGLE_SERVICES_VERSION" />
 
