--- a/plugin.xml
+++ b/plugin.xml
@@ -32,7 +32,9 @@ xmlns:android="http://schemas.android.com/apk/res/android"
     <issue>https://issues.apache.org/jira/browse/CB/component/12320638</issue>
 
     <engines>
-        <engine name="cordova-android" version=">=6.3.0" />
+        <engine name="cordova" version=">=7.1.0"/>
+        <engine name="cordova-android" version=">=7.0.0"/>
+        <engine name="cordova-ios" version=">=4.3.0"/>
     </engines>
 
     <!-- android -->
@@ -47,7 +49,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
             <uses-feature android:name="android.hardware.location.network" android:required="false" />
         </config-file>
 
-        <dependency id="cordova-support-android-plugin" version="~0.4.0"/>
+        <dependency id="cordova-support-android-plugin" version="~1.0.0"/>
 
         <framework src="com.google.android.gms:play-services-location:$GOOGLE_SERVICES_VERSION" />
 
